--- a/ant/build.xml
+++ b/ant/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project name="my_test_project">
+<project name="my_test_project" default = "hello-world">
 	<target name="hello-world">
 		<echo>Hello world!</echo>
 	</target>
